removed all header and footer from html and css

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -18,35 +18,7 @@
     ></script>
     <title>AUTH-WIKI | Home</title>
   </head>
-  <body>
-    <header>
-      <h2 class="company-logo">AUTH_WIKI</h2>
-      <nav class="desktop_nav">
-        <a href="">About</a>
-        <a href="">Products</a>
-        <a href="">Documentation</a>
-        <div class="search-bar">
-          <input type="text" placeholder="Search" />
-          <i class="fa-solid fa-magnifying-glass search-icon"></i>
-        </div>
-        <button>Login</button>
-        <button class="signup-btn">Sign Up</button>
-      </nav>
-      <div class="mob_search-bar">
-        <input type="text" placeholder="Search" />
-        <i class="fa-solid fa-magnifying-glass search-icon"></i>
-      </div>
-      <div class="mobile_nav">
-        <nav class="nav_card hide">
-          <a href="">About</a>
-          <a href="">Products</a>
-          <a href="">Developers</a>
-          <button class="login-btn">Login</button>
-          <a href="">Sign Up</a>
-        </nav>
-        <i class="menu_btn fa-solid fa-bars"></i>
-      </div>
-    </header>
+  <body class="lpbody">
     <main class="lpmiddle">
       <div class="lpmiddle1">
         <div class="lpmiddle1a">
@@ -215,41 +187,6 @@
         <h1 id="lpheading4">I4GxZURI TEAM</h1>
       </div>
     </main>
-    <footer>
-      <h2 class="company-logo">AUTH_WIKI</h2>
-      <nav class="footer_nav">
-        <section>
-          <h4>Company</h4>
-          <a href="/">About</a>
-          <a href="/">FAQs</a>
-          <a href="/">Teams</a>
-          <a href="/">Community</a>
-        </section>
-        <section>
-          <h4>Products</h4>
-          <a href="/">Supported Libraries</a>
-          <a href="/">Articles</a>
-          <a href="/">Platforms</a>
-        </section>
-        <section>
-          <h4>Documentation</h4>
-          <a href="/">Tutorials</a>
-          <a href="/">Guidelines</a>
-          <a href="/">Reference</a>
-          <a href="/">Conception</a>
-        </section>
-        <section>
-          <h4>Contact Us</h4>
-          <a href="/">Get in Touch</a>
-          <a href="/">Report Issue</a>
-          <a href="/">Connect</a>
-          <a href="/">Help</a>
-        </section>
-      </nav>
-      <div class="socials">
-        <h5 class="lptag">I4GxZURI TEAM 7</h5>
-      </div>
-    </footer>
     <script src="./js/script.js"></script>
   </body>
 </html>
