--- a/backend/base.html
+++ b/backend/base.html
@@ -21,6 +21,7 @@ integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw
 <link rel="stylesheet" href="{% static 'css/styles/devibeans.min.css' %}">
 <link rel="stylesheet" href="{% static 'css/library_detail.css' %}">
 <link rel="stylesheet" href="{% static 'css/base.css' %}">
+<!-- <link rel="stylesheet" href="{% static 'css/all.css' %}"> -->
 <link rel="stylesheet" href="{% static 'css/search.css' %}">
 <link rel="stylesheet" href="{% static 'css/team.css' %}">
 <link rel="stylesheet" href="{% static 'css/terms.css' %}">
