--- a/frontend/faqs/FAQS.html
+++ b/frontend/faqs/FAQS.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>FAQ'S page</title>
-    <link rel="stylesheet" href="../css/base.css" />
+    <link rel="stylesheet" href="../css/all.css" />
     <link rel="stylesheet" href="FAQS.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
