--- a/backend/base.html
+++ b/backend/base.html
@@ -28,7 +28,8 @@ integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw
 <link rel="stylesheet" href="{% static 'css/about-us.css' %}">
 <link rel="stylesheet" href="{% static 'css/documentation.css' %}">
 <link rel="stylesheet" href="{% static 'css/product-page.css' %}">
-<link rel="stylesheet" href="{% static 'css/landing.css' %}">
+<!-- <link rel="stylesheet" href="{% static 'css/landing.css' %}"> 
+
 <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
 <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
