--- a/frontend/Password-reset/password-reset.html
+++ b/frontend/Password-reset/password-reset.html
@@ -9,8 +9,30 @@
     <title>Reset Pass</title>
   </head>
   <body>
-    <header class="Rp-header">
-        <h1><a href="#">AUTH_WIKI</a></h1>
+    <header class="pass_reset_header">
+        <h2 class="company-logo"><a href="../index.html">AUTH_WIKI</a></h2>
+        <nav class="desktop_nav">
+            <a href="">About</a>
+            <a href="./product-page.html">Products</a>
+
+            <a href="">Documentation</a>
+            <form class="search-bar">
+                <input aria-label="search bar" type="text" placeholder="Search">
+                <i class="fa-solid fa-magnifying-glass search-icon"></i>
+            </form>
+            <a class="btn-link" href=""><button class="login-btn">Login</button></a>
+            <a class="btn-link" href="../signup/signup.html"><button class="signup-btn">Sign Up</button></a>
+        </nav>
+        <div class="mobile_nav">
+            <nav class="nav_card hide">
+                <a href="">About</a>
+                <a href="./product-page.html">Products</a>
+                <a href="">Documentation</a>
+                <a href=""><button class="login-btn">Login</button></a>
+                <a href="../signup/signup.html">Sign Up</a>
+            </nav>
+            <i class="menu_btn fa-solid fa-bars"></i>
+        </div>
     </header>
     <div class="pass_reset_div">
       <h1 style="color: #fffdfd;">Reset Password</h1>
