--- a/frontend/base/base.html
+++ b/frontend/base/base.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" type="text/css" href="../css/base.css">
+    <link rel="stylesheet" type="text/css" href="../css/all.css">
     <link rel="stylesheet" type="text/css" href="./base.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -22,10 +22,10 @@
             <a href="./product-page.html">Products</a>
 
             <a href="">Documentation</a>
-            <div class="search-bar">
-                <input type="text" placeholder="Search">
+            <form class="search-bar">
+                <input aria-label="search bar" type="text" placeholder="Search">
                 <i class="fa-solid fa-magnifying-glass search-icon"></i>
-            </div>
+            </form>
             <a class="btn-link" href=""><button class="login-btn">Login</button></a>
             <a class="btn-link" href="../signup/signup.html"><button class="signup-btn">Sign Up</button></a>
         </nav>
@@ -36,7 +36,6 @@
                 <a href="">Documentation</a>
                 <a href=""><button class="login-btn">Login</button></a>
                 <a href="../signup/signup.html">Sign Up</a>
-
             </nav>
             <i class="menu_btn fa-solid fa-bars"></i>
         </div>
