--- a/frontend/terms/terms.html
+++ b/frontend/terms/terms.html
@@ -9,15 +9,37 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="../css/base.css">
+    <link rel="stylesheet" href="../css/all.css">
     <link rel="stylesheet" href="terms.css">
+    <script src="https://kit.fontawesome.com/1b2bdedf91.js" crossorigin="anonymous"></script>
 </head>
 
 <body>
-    <header class="tp-header">
-        <h1><a href="#">AUTH_WIKI</a></h1>
-    </header>
-    <hr class="tp-hr">
+    <header>
+        <h2 class="company-logo"><a href="../index.html">AUTH_WIKI</a></h2>
+        <nav class="desktop_nav">
+            <a href="">About</a>
+            <a href="./product-page.html">Products</a>
+
+            <a href="">Documentation</a>
+            <form class="search-bar">
+                <input aria-label="search bar" type="text" placeholder="Search">
+                <i class="fa-solid fa-magnifying-glass search-icon"></i>
+            </form>
+            <a class="btn-link" href=""><button class="login-btn">Login</button></a>
+            <a class="btn-link" href="../signup/signup.html"><button class="signup-btn">Sign Up</button></a>
+        </nav>
+        <div class="mobile_nav">
+            <nav class="nav_card hide">
+                <a href="">About</a>
+                <a href="./product-page.html">Products</a>
+                <a href="">Documentation</a>
+                <a href=""><button class="login-btn">Login</button></a>
+                <a href="../signup/signup.html">Sign Up</a>
+            </nav>
+            <i class="menu_btn fa-solid fa-bars"></i>
+        </div>
+    </header>    
     <main class="container">
         <div class="tp-container">
             <div class="tp-main-left">
@@ -49,6 +71,44 @@
             </div>
         </div>
     </main>
+    <footer>
+        <h2 class="company-logo"><a href="../index.html">AUTH_WIKI</a></h2>
+        <nav class="footer_nav">
+            <section>
+                <h4>Company</h4>
+                <a href="/">About</a>
+                <a href="/">FAQs</a>
+                <a href="/">Teams</a>
+                <a href="/">Community</a>
+            </section>
+            <section>
+                <h4>Products</h4>
+                <a href="/">Supported Libraries</a>
+                <a href="/">Articles</a>
+                <a href="/">Platforms</a>
+            </section>
+            <section>
+                <h4>Documentation</h4>
+                <a href="/">Tutorials</a>
+                <a href="/">Guidelines</a>
+                <a href="/">Reference</a>
+                <a href="/">Conception</a>
+            </section>
+            <section>
+                <h4>Contact Us</h4>
+                <a href="/">Get in Touch</a>
+                <a href="/">Report Issue</a>
+                <a href="/">Connect</a>
+                <a href="/">Help</a>
+            </section>
+        </nav>
+        <div class="socials">
+            <a href="/"><i class="fa-brands fa-facebook-square"></i></a>
+            <a href="/"><i class="fa-brands fa-twitter"></i></a>
+            <a href="/"><i class="fa-brands fa-pinterest"></i></a>
+            <a href="/"><i class="fa-brands fa-instagram"></i></a>
+        </div>
+    </footer>
 </body>
 
 </html>
