--- a/backend/base.html
+++ b/backend/base.html
@@ -27,6 +27,7 @@ integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw
 <link rel="stylesheet" href="{% static 'css/terms.css' %}">
 <link rel="stylesheet" href="{% static 'css/about-us.css' %}">
 <link rel="stylesheet" href="{% static 'css/documentation.css' %}">
+<link rel="stylesheet" href="{% static 'css/library_preview.css' %}">
 <link rel="stylesheet" href="{% static 'css/product-page.css' %}">
 <!-- <link rel="stylesheet" href="{% static 'css/landing.css' %}"> -->
 <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
