Checkmail page rendering

--- a/frontend/checkmail/checkmail.html
+++ b/frontend/checkmail/checkmail.html
@@ -6,18 +6,21 @@
       <meta name="viewport" content="width=device-width, initial-scale=1.0">
       <title>Checkmail page</title>
       <link rel="stylesheet" href="checkmail.css">
+      <link rel="preconnect" href="https://fonts.googleapis.com">
+      <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+      <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400;500;600;700&display=swap" rel="stylesheet">
 </head>
 <body>
       <main>
             <section class="cmp-container">
                   <figure class="cmp-img-container">
-                        <img src="../checkmail/Images/mail.svg" alt="Mail icon" class="cmp-img">
-                        <figcaption class="cmp-caption">Check Your Mail.</figcaption>
+                        <img src="../checkmail/Images/mail.svg" alt="Mail icon">
+                        <figcaption>Check Your Mail.</figcaption>
                   </figure>
-                  <p>We have sent a password recovery instruction to your email.</p>
-                  <button type="submit">Open mail app</button> <br>
-                  <a href="#" class="cmp-a">Skip, I'll confirm later</a>
-                  <p class="cmp-para-down">Did not receive the email? Check you spam folder or <a href="#" class="cmp-a cmp-a-email">try another email address</a></p>
+                  <p class="cmp-para-top">We have sent a password recovery <br> instruction to your email.</p>
+                  <button type="submit">Open Email app</button> <br>
+                  <a href="#" class="cmp-link">Skip, I'll confirm later</a>
+                  <p class="cmp-para-down">Did not receive the email? Check your spam folder or <a href="#" class="cmp-link cmp-link-email">try another email address.</a></p>
             </section>
       </main>
 </body>
