--- a/frontend/index.html
+++ b/frontend/index.html
@@ -22,9 +22,9 @@
     <header>
       <h2 class="company-logo">AUTH_WIKI</h2>
       <nav class="desktop_nav">
-        <a href="">About</a>
-        <a href="">Products</a>
-        <a href="">Documentation</a>
+        <a href="./about-us/about-us.html">About</a>
+        <a href="./product/product.html">Products</a>
+        <a href="./documentation/documentation.html">Documentation</a>
         <div class="search-bar">
           <input type="text" placeholder="Search" />
           <i class="fa-solid fa-magnifying-glass search-icon"></i>
