--- a/backend/base.html
+++ b/backend/base.html
@@ -28,7 +28,7 @@ integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw
 <link rel="stylesheet" href="{% static 'css/terms.css' %}">
 <link rel="stylesheet" href="{% static 'css/about-us.css' %}">
 <link rel="stylesheet" href="{% static 'css/documentation.css' %}">
-
+<link href="{% static 'images/favicon.ico' %}" rel="icon" sizes="" type="image/png">
 <link rel="stylesheet" href="{% static 'css/library_preview.css' %}">
 <link rel="stylesheet" href="{% static 'css/product-page.css' %}">
 <link rel="stylesheet" href="{% static 'css/landing.css' %}">
@@ -61,15 +61,15 @@ integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw
         <a href="{% url 'documentation' %}" style="text-decoration: none;">Documentation</a>
         <div class="search-bar">
   
-          <form method="POST" action="{% url 'search' %}" style="width: 100%;">
+          <form method="POST" action="{% url 'search' %}" style="width: 100%; height: 100%;">
 
             {% csrf_token %}
         
-            <input type="text" placeholder="Search for a library"  name="searched">
+            <input type="text" placeholder="Search"  name="searched">
             <i class="fa-solid fa-magnifying-glass search-icon"></i>
         </form>
         </div>
-        <a class="btn-link" href="{% url 'login' %}" style="text-decoration: none;"><button class="login-btn">{{request.user}}</button></a>
+        <a class="btn-link" href="" style="text-decoration: none;"><button class="login-btn">{{request.user}}</button></a>
         <a class="btn-link" href="{% url 'logout' %}" style="text-decoration: none;"><button class="login-btn">Logout</button></a>
 
     </nav>
@@ -79,7 +79,7 @@ integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw
     </div> -->
     <div class="mobile_nav">
         <nav class="nav_card hide">
-          <a href="{%"> {{request.user}}</a>
+          <a href=""> {{request.user}}</a>
             <a href="{% url 'about' %}">About</a>
             <a href="{% url 'libraries' %}">Libraries</a>
             <a href="{% url 'documentation' %}">Documentation</a>
@@ -108,11 +108,11 @@ integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw
         <a href="{% url 'documentation' %}" style="text-decoration: none;">Documentation</a>
         <div class="search-bar">
   
-          <form method="POST" action="{% url 'search' %}" style="width: 100%;">
+          <form method="POST" action="{% url 'search' %}" style="width: 100%; height: 100%;">
 
             {% csrf_token %}
         
-            <input type="text" placeholder="Search for a library"  name="searched">
+            <input type="text" placeholder="Search"  name="searched">
             <i class="fa-solid fa-magnifying-glass search-icon"></i>
         </form>
         </div>
